2009-01-13  higepon  <higepon@users.sourceforge.jp>

        * configure.ac : On OSX don't use -shared option use -dynamiclib option instread.

2009-01-12  higepon  <higepon@users.sourceforge.jp>

        * Added %ffi-call->void.

        * FFITest.cpp (TEST_F): Added test for FFI ByteVector.

        * FFI.cpp (CStack::push): Added char* support to FFI.

2009-01-11  higepon  <higepon@users.sourceforge.jp>

        * FFITest.cpp : Added Test for pushing Fixnum to CStack.

        * FFIProcedures.cpp : Added %ffi-open and %ffi-lookup.

        * FFITest.cpp : Added.

        * FFI.cpp: Added for Foreign Function Interface.

        * Makefile.am (noinst_LTLIBRARIES): Added libffitest.la for test.

2009-01-10  higepon  <higepon@users.sourceforge.jp>

        * test-data.scm : Added some datum comment tests.

        * Reader.y (datum): Fixed "Issue 36: double datum comment causes error" pointed out by leque.
                            Thanks to SaitoAtsushi for the patch.

2008-01-08  kokosabu  <kokosabu@gmail.com>

        * Changed: get-bytevector-u(file).

2009-01-09  higepon  <higepon@users.sourceforge.jp>

        * shell: Added.

        * lib/mosh/shell/repl.ss: Added Shell REPL.

        * lib/mosh/shell.ss : Added Shell script library.

        * VM(parent) ignores SIGINT, child use default handler for SIGINT.

        * lib/mosh/shell.scm : Added -> and $->. Works like following ($-> ls (grep cpp) (grep main)).

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss: don't use (make-cache-rib).

2008-01-08  kokosabu  <kokosabu@gmail.com>

        * Added: lookahead-u8(file, bytearray, custom).

2009-01-08  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Set library-path to absolute.

        * library.scm (expand-path): Added expand-path.

        * ProcessProcedures.cpp (setCurrentDirectoryDEx): Added set-current-directory!.

        * lib/mosh/shell.scm: Added spawn and spawn->string.
