@@ -1,5 +1,9 @@
 2009-01-13  higepon  <higepon@users.sourceforge.jp>
 
+        * FFIProcedures.cpp: Use intptr_t instead of uint64_t.
+
+        * Bignum.h (scheme): Added for compatibility.
+
         * configure.ac : On OSX don't use -shared option use -dynamiclib option instread.
 
 2009-01-12  higepon  <higepon@users.sourceforge.jp>
